--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,8 @@
         body {
             min-height: 100%;
             position: relative;
-            padding-bottom: 60px;  /* [footer-height] */
+            padding-bottom: 60px;
+            /* [footer-height] */
         }
 
         .footer {
@@ -34,7 +35,8 @@
             left: 0;
             right: 0;
             bottom: 0;
-            height: 60px;  /* [footer-height] */
+            height: 60px;
+            /* [footer-height] */
         }
     </style>
 </head>
