文章详情页消息闪现

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load i18n %}
 {% load account socialaccount %}
-{% block title %}登录{% endblock %}
+{% block header_title %}登录{% endblock header_title %}
 
 {% block content %}
 <div class="container">
