--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% load i18n %}
-{% block title %}{% trans "Change Password" %}{% endblock %}
+{% block header_title %}{% trans "Change Password" %}{% endblock header_title %}
 
 {% block content %}
 
