--- a/templates/article/create.html
+++ b/templates/article/create.html
@@ -2,7 +2,7 @@
 {% extends "base.html" %} {% load staticfiles %}
 
 {# 写入 base.html 中定义的 title #}
-{% block title %} 写文章 {% endblock title %}
+{% block header_title %} 写文章 {% endblock header_title %}
 
 {# 写入 base.html 中定义的 content #}
 {% block content %}
