--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% load account %}
 
-{% block title %}{% trans "Password Reset" %}{% endblock %}
+{% block header_title %}{% trans "Password Reset" %}{% endblock header_title %}
 
 {% block content %}
 
