--- a/templates/article/update.html
+++ b/templates/article/update.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% load staticfiles %}
 
-{% block title %} 更新文章 {% endblock title %}
+{% block header_title %} 更新文章 {% endblock header_title %}
 
 {% block content %}
 <div class="container">
