--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <!-- 网站采用的字符编码 -->
     <meta charset="utf-8">
     {# 预留网站标题的位置 #}
-    <title>{% block title %}{% endblock %}</title>
+    <title>{% block header_title %}{% endblock %}</title>
     <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}">
     <!-- 引入bootstrap的css文件 -->
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="{% static 'md_css/monokai.css' %}">
     <!-- Font Awesome 矢量图标库 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.14.0/css/all.min.css">
+    {% block header_link %}{% endblock %}
     <style>
         /* 页面沉底，参考 https://css-tricks.com/couple-takes-sticky-footer/ */
         html {
@@ -87,6 +88,10 @@
     <script src="{% static 'jquery/jquery-3.3.1.min.js' %}"></script>
     <!-- <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
 
+    <!-- web弹窗组件 layer依赖与 jquery，因此要在 jquery后面引入layer -->
+    <script src="{% static 'layer/layer.js' %}"></script>
+    <!-- <script src="https://cdn.bootcdn.net/ajax/libs/layer/3.1.1/layer.js"></script> -->
+
     <!-- 回到顶部浮动按钮 -->
     {% include 'back2top_btn.html' %}
 
@@ -104,10 +109,6 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script> -->
-
-    <!-- web弹窗组件 layer依赖与 jquery，因此要在 jquery后面引入layer -->
-    <script src="{% static 'layer/layer.js' %}"></script>
-    <!-- <script src="https://cdn.bootcdn.net/ajax/libs/layer/3.1.1/layer.js"></script> -->
 
 </body>
 
