--- a/templates/userprofile/edit.html
+++ b/templates/userprofile/edit.html
@@ -1,6 +1,7 @@
-{% extends "base.html" %} {% load staticfiles %}
+{% extends "base.html" %} 
+{% load staticfiles %}
 
-{% block title %} 用户信息 {% endblock title %}
+{% block header_title %} 用户信息 {% endblock header_title %}
 
 {% block content %}
 <div class="container">
