--- a/templates/userprofile/login.html
+++ b/templates/userprofile/login.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% load staticfiles %}
 
-{% block title %} 用户登录 {% endblock title %}
+{% block header_title %} 用户登录 {% endblock header_title %}
 
 {% block content %}
 <div class="container">
