使用 django-mdeditor编辑文章正文

--- a/templates/article/detail.html
+++ b/templates/article/detail.html
@@ -99,7 +99,7 @@
                             </strong>
                         </label>
                         <!-- <textarea type="text" class="form-control" id="body" name="body" rows="2"></textarea> -->
-                        {# 修改评论的正文表单，使用富文本 #}
+                        {# 修改评论的正文表单，使用mdeditor #}
                         <div>
                             {{ comment_form.media }}
                             {{ comment_form.body }}
