--- a/templates/article/create.html
+++ b/templates/article/create.html
@@ -1,19 +1,17 @@
 <!-- extends表明此页面继承自 base.html 文件 -->
 {% extends "base.html" %} {% load staticfiles %}
-
-{# 写入 base.html 中定义的 title #}
+<!-- 写入 base.html 中定义的 title -->
 {% block header_title %} 写文章 {% endblock header_title %}
-
-{# 写入 base.html 中定义的 content #}
+<!-- 写入 base.html 中定义的 content -->
 {% block content %}
 <!-- 写文章表单 -->
 <div class="container">
     <div class="row">
         <div class="col-12">
             <br>
-            <!-- 提交文章的表单，enctype 让表单能够上传图片 -->
+            <!-- 提交文章的表单 -->
             <form method="post" action="." enctype="multipart/form-data">
-                {# Django中需要POST数据的地方都必须有csrf_token #}
+                <!-- Django中需要POST数据的地方都必须有csrf_token -->
                 {% csrf_token %}
                 <!-- 文章标题图 -->
                 <div class="form-group">
@@ -30,7 +28,7 @@
                 <!-- 文章栏目 -->
                 <div class="form-group">
                     <label for="column">栏目</label>
-                    <select class="form-control" id="column" name="column">
+                    <select class="form-control col-3" id="column" name="column">
                         <option value="none">请选择栏目..</option>
                         {% for column in columns %}
                         <option value="{{ column.id }}">{{ column }}</option>
@@ -39,14 +37,21 @@
                 </div>
                 <!-- 文章标签 -->
                 <div class="form-group">
-                    <label for="tags">标签（使用英文半角逗号分隔）</label>
-                    <input type="text" class="form-control col-3" id="tags" name="tags" placeholder="文学,诗歌,青春">
+                    <!-- 标签 -->
+                    <label for="tags">标签</label>
+                    <!-- 文本框 -->
+                    <input type="text" class="form-control col-3" id="tags" name="tags">
                 </div>
                 <!-- 文章正文 -->
                 <div class="form-group">
                     <label for="body">文章正文</label>
+                    {% comment %}
                     <!-- 文本区域 -->
                     <textarea type="text" class="form-control" id="body" name="body" rows="12"></textarea>
+                    {% endcomment %}
+                    {# 改用 mdeditor编写正文 #}
+                    {{ article_post_form.media }}
+                    {{ article_post_form.body }}
                 </div>
                 <!-- 提交按钮 -->
                 <button type="submit" class="btn btn-primary">完成</button>
