--- a/templates/base.html
+++ b/templates/base.html
@@ -18,29 +18,10 @@
     <link rel="stylesheet" href="{% static 'md_css/monokai.css' %}">
     <!-- Font Awesome 矢量图标库 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.14.0/css/all.min.css">
-    {% block header_link %}{% endblock %}
-    <style>
-        /* 页面沉底，参考 https://css-tricks.com/couple-takes-sticky-footer/ */
-        html {
-            height: 100%;
-        }
-
-        body {
-            min-height: 100%;
-            position: relative;
-            padding-bottom: 60px;
-            /* [footer-height] */
-        }
-
-        .footer {
-            position: absolute;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            height: 60px;
-            /* [footer-height] */
-        }
-    </style>
+    <!-- 自定义样式 -->
+    <link rel="stylesheet" href="{% static 'css/custom.css' %}">
+    {# 预留引入外链的位置 #}
+    {% block header_link %}{% endblock header_link %}
 </head>
 
 <body>
