修改登录、注销与重置密码相关的页面

--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -1,25 +1,18 @@
-{% extends "base.html" %}
+{% extends "account/base.html" %}
 
 {% load i18n %}
 {% load account %}
 
 {% block header_title %}{% trans "Password Reset" %}{% endblock header_title %}
 
-{% block content %}
+{% block account_content %}
 
-<div class="container">
-    <div class="row">
-        <div class="col-12">
-            <br>
+    <h5 class="mb-2 mt-4">{% trans "Password Reset" %}</h5>
 
-            {# <h1>{% trans "Password Reset" %}</h1> #}
+    {% if user.is_authenticated %}
+    {% include "account/snippets/already_logged_in.html" %}
+    {% endif %}
 
-            {% if user.is_authenticated %}
-            {% include "account/snippets/already_logged_in.html" %}
-            {% endif %}
-
-            <p>{% blocktrans %}我们已经给你发了一封电子邮件。如果您在几分钟内没有收到，请与我们联系。{% endblocktrans %}</p>
-        </div>
-    </div>
-</div>
-{% endblock %}
+    <p>{% blocktrans %}我们已经给你发了一封电子邮件。如果您在几分钟内没有收到，请与我们联系。{% endblocktrans %}</p>
+    
+{% endblock account_content %}
