--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -1,16 +1,11 @@
-{% extends "base.html" %}
+{% extends "account/base.html" %}
 
 {% load i18n %}
 {% block header_title %}{% trans "Change Password" %}{% endblock header_title %}
 
-{% block content %}
-<div class="container">
-    <div class="row">
-        <div class="col-12">
-            <br>
-            {# <h1>{% trans "Change Password" %}</h1> #}
-            <p>您的密码现在已更改。立即前往<a href="{% url 'account_login' %}">登录</a></p>
-        </div>
-    </div>
-</div>
-{% endblock %}
+{% block account_content %}
+
+    <h5 class="mb-2 mt-4">{% trans "Change Password" %}：</h5>
+    <p>您的密码现在已更改。立即前往<a href="{% url 'account_login' %}">登录</a></p>
+    
+{% endblock account_content %}
