--- a/templates/header.html
+++ b/templates/header.html
@@ -42,8 +42,8 @@
                         <a class="dropdown-item" href="{% url 'article:article_create' %}">写文章</a>
                         <a class="dropdown-item" href='{% url "userprofile:edit" user.id %}'>个人信息</a>
                         <!-- 删除用户 -->
-                        <a class="dropdown-item" href="#" onclick="user_delete()">注销账号</a>
-                        <a class="dropdown-item" href="{% url 'userprofile:logout' %}">退出登录</a>
+                        <a class="dropdown-item" href="#" onclick="user_delete()">删除账号</a>
+                        <a class="dropdown-item" href="{% url 'userprofile:logout' %}">注销登录</a>
                     </div>
                 </li>
                 {# 如果用户未登录，则显示 “登录” #}
