--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -1,43 +1,38 @@
-{% extends "base.html" %}
+{% extends "account/base.html" %}
 
 {% load i18n %}
 {% load account %}
 
 {% block header_title %}{% trans "Password Reset" %}{% endblock header_title %}
 
-{% block content %}
+{% block account_content %}
 
-<div class="container">
-    <div class="row">
-        <div class="col-12">
-            <br>
-            {# <h1>{% trans "Password Reset" %}</h1> #}
+<h5 class="mb-2 mt-4">{% trans "Password Reset" %}</h5>
 
-            {% if user.is_authenticated %}
-            {% include "account/snippets/already_logged_in.html" %}
-            {% endif %}
+{% if user.is_authenticated %}
+{% include "account/snippets/already_logged_in.html" %}
+{% endif %}
 
-            <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}
-            </p>
+<p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}
+</p>
 
-            <div class="col-6">
-                <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-                    {% csrf_token %}
-                    <div class="form-group">
-                        <label for="id_email">E-mail:</label>
-                        <input class="form-control" type="email" name="email" placeholder="E-mail地址"
-                            autocomplete="email" required id="id_email">
-                    </div>
-                    <input class="primaryAction btn btn-primary" type="submit"
-                        value="{% trans 'Reset My Password' %}" />
-                </form>
-            </div>
-            <br>
-
-            <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}
-            </p>
-
-        </div>
+<div class="col-6">
+    <div class="form-group">
+        <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+            {% csrf_token %}
+            {{ form.as_p }}
+            {% comment %} <div class="form-group">
+                <label for="id_email">E-mail:</label>
+                <input class="form-control" type="email" name="email" placeholder="E-mail地址" autocomplete="email"
+                    required id="id_email">
+            </div> {% endcomment %}
+            <input class="primaryAction btn btn-primary" type="submit" value="{% trans 'Reset My Password' %}" />
+        </form>
     </div>
 </div>
-{% endblock %}
+<br>
+
+<p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}
+</p>
+
+{% endblock account_content %}
