--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,63 +1,48 @@
-{% extends "base.html" %}
+{% extends "account/base.html" %}
 
 {% load i18n %}
 
 {% block header_title %}{% trans "Signup" %}{% endblock header_title %}
 
-{% block content %}
+{% block account_content %}
 
-<div class="container">
-  <div class="row">
-    <div class="col-12">
-      <br>
-      <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}
-      </p>
-      <h5 class="mb-2 mt-4">{% trans "Sign Up" %}：</h5>
+  <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}
+  </p>
+  <h5 class="mb-2 mt-4">{% trans "Sign Up" %}：</h5>
 
-      <div class="col-6">
-        <div class="form-group">
-          {% comment %}
-          <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-            {% csrf_token %}
-            {{ form.as_p }}
-            {% if redirect_field_value %}
-            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-            {% endif %}
-            <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-          </form>
-          {% endcomment %}
-          <form class="signup" id="signup_form" method="post" action="/accounts/signup/">
-            {% csrf_token %}
-            <div class="form-group mb-1">
-              <p><label for="id_username">用户名:</label>
-                <input class="form-control" type="text" name="username" placeholder="用户名" autocomplete="username"
-                  minlength="1" maxlength="150" required id="id_username"></p>
-            </div>
-            <div class="form-group mb-1">
-              <p><label for="id_email">E-mail （选填项）:</label>
-                <input class="form-control" type="email" name="email" placeholder="E-mail地址" autocomplete="email"
-                  id="id_email"></p>
-            </div>
-            <div class="form-group mb-1">
-              <p><label for="id_password1">密码:</label>
-                <input class="form-control" type="password" name="password1" placeholder="密码"
-                  autocomplete="new-password" required id="id_password1"></p>
-            </div>
-            <div class="form-group mb-1">
-              <p><label for="id_password2">密码(重复):</label>
-                <input class="form-control" type="password" name="password2" placeholder="密码(重复)" required=""
-                  id="id_password2">
-            </div>
-            {% if redirect_field_value %}
-            <input class="form-control" type="hidden" name="{{ redirect_field_name }}"
-              value="{{ redirect_field_value }}" />
-            {% endif %}
-            <button type="submit" class="primaryAction btn btn-primary">注册 &raquo;</button>
-          </form>
+  <div class="col-6">
+    <div class="form-group">
+      <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+        {% csrf_token %}
+        <div class="form-group mb-1">
+          {{ form.as_p }}
         </div>
-      </div>
-
+        {% comment %} <div class="form-group mb-1">
+            <label for="id_username">用户名:</label>
+            <input class="form-control" type="text" name="username" placeholder="用户名" autocomplete="username"
+              minlength="1" maxlength="150" required id="id_username">
+        </div>
+        <div class="form-group mb-1">
+            <label for="id_email">E-mail （选填项）:</label>
+            <input class="form-control" type="email" name="email" placeholder="E-mail地址" autocomplete="email"
+              id="id_email">
+        </div>
+        <div class="form-group mb-1">
+            <label for="id_password1">密码:</label>
+            <input class="form-control" type="password" name="password1" placeholder="密码"
+              autocomplete="new-password" required id="id_password1">
+        </div>
+        <div class="form-group mb-1">
+            <label for="id_password2">密码(重复):</label>
+            <input class="form-control" type="password" name="password2" placeholder="密码(重复)" required
+              id="id_password2">
+        </div> {% endcomment %}
+        {% if redirect_field_value %}
+        <input class="form-control" type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+        {% endif %}
+        <button type="submit" class="primaryAction btn btn-primary">{% trans "Sign Up" %} &raquo;</button>
+      </form>
     </div>
   </div>
-</div>
-{% endblock %}
+
+{% endblock account_content %}
