--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,8 @@
 <head>
     <!-- 网站采用的字符编码 -->
     <meta charset="utf-8">
+    <!-- 页面自适应宽度 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {# 预留网站标题的位置 #}
     <title>{% block header_title %}{% endblock %}</title>
     <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}">
@@ -15,13 +17,13 @@
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"> -->
     <!-- 引入 monikai.css，用于代码块的语法高亮 -->
-    <link rel="stylesheet" href="{% static 'md_css/monokai.css' %}">
+    <link rel="stylesheet" href="{% static 'css/monokai.css' %}">
     <!-- Font Awesome 矢量图标库 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.14.0/css/all.min.css">
     <!-- 自定义样式 -->
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
     {# 预留引入外链的位置 #}
-    {% block header_link %}{% endblock header_link %}
+    {% block head_extra %}{% endblock head_extra %}
 </head>
 
 <body>
@@ -61,7 +63,7 @@
             document.oncontextmenu = function () {
                 return false;
             }
-        }        
+        }
     </script>
     {% endcomment %}
 
