调整 mdeditor静态资源的引入方式

--- a/templates/account/email.html
+++ b/templates/account/email.html
@@ -2,7 +2,7 @@
 
 {% load i18n %}
 
-{% block header_title %}{% trans "E-mail Addresses" %}{% endblock %}
+{% block head_title %}{% trans "E-mail Addresses" %}{% endblock head_title %}
 
 {% block account_content %}
 <h5 class="mb-2 mt-4">{% trans "E-mail Addresses" %}：</h5>
