--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% load account socialaccount %}
 
-{% block header_title %}登录{% endblock header_title %}
+{% block head_title %}登录{% endblock head_title %}
 
 {% block account_content %}
 
