--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -1,7 +1,7 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
-{% block header_title %}{% trans "Change Password" %}{% endblock header_title %}
+{% block head_title %}{% trans "Change Password" %}{% endblock head_title %}
 
 {% block account_content %}
 
