--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,7 +3,7 @@
         <p class="m-0 text-center text-light">
             Copyright&nbsp;
             &copy;&nbsp;
-            <a href="#">HEY-BLOOD</a>&nbsp;
+            <a href="https://github.com/HEY-BLOOD/mysite">HEY-BLOOD</a>&nbsp;
             2020
             {% if user.is_authenticated %}
                 {% if user.is_superuser %}
