--- a/templates/notice/list.html
+++ b/templates/notice/list.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% load staticfiles %}
 
-{% block header_title %}
+{% block head_title %}
 通知
-{% endblock header_title %}
+{% endblock head_title %}
 
 {% comment %}
 模板中主要提供了两个功能：
