--- a/templates/account/email_confirm.html
+++ b/templates/account/email_confirm.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% load account %}
 
-{% block header_title %}{% trans "Confirm E-mail Address" %}{% endblock header_title %}
+{% block head_title %}{% trans "Confirm E-mail Address" %}{% endblock head_title %}
 
 
 {% block account_content %}
