--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% load account %}
 
-{% block header_title %}{% trans "Password Reset" %}{% endblock header_title %}
+{% block head_title %}{% trans "Password Reset" %}{% endblock head_title %}
 
 {% block account_content %}
 
