--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -2,7 +2,7 @@
 
 {% load i18n %}
 
-{% block header_title %}{% trans "Signup" %}{% endblock header_title %}
+{% block head_title %}{% trans "Signup" %}{% endblock head_title %}
 
 {% block account_content %}
 
