--- a/templates/article/create.html
+++ b/templates/article/create.html
@@ -1,8 +1,15 @@
 <!-- extends表明此页面继承自 base.html 文件 -->
-{% extends "base.html" %} {% load staticfiles %}
-<!-- 写入 base.html 中定义的 title -->
-{% block header_title %} 写文章 {% endblock header_title %}
-<!-- 写入 base.html 中定义的 content -->
+{% extends "base.html" %}
+
+{% load staticfiles %}
+
+{% block head_title %} 写文章 {% endblock head_title %}
+
+{% block extra_head %}
+    <!-- 引入mdeditor编辑器的样式 -->
+    <link rel="stylesheet" href="{% static 'mdeditor/css/editormd.min.css' %}">
+{% endblock extra_head %}
+
 {% block content %}
 <!-- 写文章表单 -->
 <div class="container">
@@ -23,7 +30,7 @@
                     <!-- 标签 -->
                     <label for="title">文章标题</label>
                     <!-- 文本框 -->
-                    <input type="text" class="form-control" id="title" name="title">
+                    <input type="text" class="form-control" id="title" name="title" required>
                 </div>
                 <!-- 文章栏目 -->
                 <div class="form-group">
@@ -31,7 +38,7 @@
                     <select class="form-control col-3" id="column" name="column">
                         <option value="none">请选择栏目..</option>
                         {% for column in columns %}
-                        <option value="{{ column.id }}">{{ column }}</option>
+                            <option value="{{ column.id }}">{{ column }}</option>
                         {% endfor %}
                     </select>
                 </div>
@@ -45,13 +52,11 @@
                 <!-- 文章正文 -->
                 <div class="form-group">
                     <label for="body">文章正文</label>
-                    {% comment %}
                     <!-- 文本区域 -->
-                    <textarea type="text" class="form-control" id="body" name="body" rows="12"></textarea>
-                    {% endcomment %}
                     {# 改用 mdeditor编写正文 #}
-                    {{ article_post_form.media }}
-                    {{ article_post_form.body }}
+                    <div class="wmd-wrapper"  id="id_body-wmd-wrapper">
+                        <textarea  cols="40" id="id_body" name="body" rows="10" required></textarea>
+                    </div>
                 </div>
                 <!-- 提交按钮 -->
                 <button type="submit" class="btn btn-primary">完成</button>
@@ -60,3 +65,11 @@
     </div>
 </div>
 {% endblock content %}
+
+
+{% block script %}
+    <!-- 引入mdeditor编辑器的静态资源 -->
+    <script src="{% static 'mdeditor/js/editormd.min.js' %}"></script>
+    <!-- 文章正文 mdeditor编辑器控件的渲染 -->
+    <script src="{% static 'mdeditor/id_body-wmd-wrapper.js' %}"></script>
+{% endblock script %}
