--- a/templates/article/list.html
+++ b/templates/article/list.html
@@ -7,9 +7,9 @@
 {% load my_tags %}
 
 {# 写入 base.html 中定义的 title #}
-{% block header_title %}
+{% block head_title %}
 首页
-{% endblock header_title %}
+{% endblock head_title %}
 
 {# 写入 base.html 中定义的 content #}
 {% block content %}
