--- a/templates/article/update.html
+++ b/templates/article/update.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %} {% load staticfiles %}
 
-{% block header_title %} 更新文章 {% endblock header_title %}
+{% block head_title %} 更新文章 {% endblock head_title %}
+
+
+{% block extra_head %}
+    <!-- 引入mdeditor编辑器的样式 -->
+    <link rel="stylesheet" href="{% static 'mdeditor/css/editormd.min.css' %}">
+{% endblock extra_head %}
 
 {% block content %}
 <div class="container">
@@ -42,15 +48,9 @@
                 <div class="form-group">
                     <label for="body">文章正文</label>
                     {# 改用 mdeditor编写正文 #}
-                    <!-- 引入mdeditor编辑器的静态资源 -->
-                    {{ article_post_form.media }}
                     <div class="wmd-wrapper"  id="id_body-wmd-wrapper">
                         <textarea  cols="40" id="id_body" name="body" rows="10" required>{{ article.body }}</textarea>
                     </div>
-                    {% comment %}
-                    <!-- 文本域不需要 value 属性，直接在标签体中嵌入数据即可  -->
-                    <textarea type="text" class="form-control" id="body" name="body" rows="12">{{ article.body }}</textarea>
-                    {% endcomment %}
                 </div>
                 <button type="submit" class="btn btn-primary">完成</button>
             </form>
@@ -60,62 +60,8 @@
 {% endblock content %}
 
 {% block script %}
-<script type="text/javascript">
-/* article:update 文章修改的mdeditor正文控件 */
-$(function () {
-        editormd("id_body-wmd-wrapper", {
-            watch: true, // 关闭实时预览
-            lineNumbers: true,
-            lineWrapping: false,
-            width: "100% ",
-            height: 500,
-            placeholder: '',
-            // 当有多个mdeditor时，全屏后，其他mdeditor仍然显示，解决此问题。
-            onfullscreen : function() {
-                this.editor.css("border-radius", 0).css("z-index", 9999);
-            },
-            onfullscreenExit : function() {
-                this.editor.css({
-                    zIndex : 10,
-                    border : "1px solid rgb(221,221,221)"
-                })
-            },
-            syncScrolling: "single",
-            path: "/static/mdeditor/js/lib/",
-            // theme
-            theme : "default",
-            previewTheme : "default",
-            editorTheme : "default",
-
-            saveHTMLToTextarea: true, // editor.md 有问题没有测试成功
-            toolbarAutoFixed: true,
-            searchReplace: true,
-            emoji: true,
-            tex: true,
-            taskList: false,
-            flowChart: true,
-            sequenceDiagram: true,
-
-            // image upload
-            imageUpload: true,
-            imageFormats: ['jpg', 'jpeg', 'gif', 'png', 'bmp', 'webp'],
-            imageUploadURL: "/mdeditor/uploads/",
-            toolbarIcons: function () {
-                return ['undo', 'redo', '|', 'bold', 'del', 'italic', 'quote', '|', 'h1', 'h2', 'h3', 'h5', 'h6', '|', 'list-ul', 'list-ol', 'hr', '|', 'link', 'reference-link', 'image', 'code', 'preformatted-text', 'code-block', 'table', 'datetime', 'emoji', 'html-entities', 'pagebreak', 'goto-line', '|', 'help', 'info', '|', 'preview', 'watch', 'fullscreen']
-            },
-            onload: function () {
-                console.log('onload', this);
-                //this.fullscreen();
-                //this.unwatch();
-                //this.watch().fullscreen();
-
-                //this.setMarkdown("#PHP");
-                //this.width("100%");
-                //this.height(480);
-                //this.resize("100%", 640);
-            }
-        });
-
-    });
-</script>
+    <!-- 引入mdeditor编辑器的静态资源 -->
+    <script src="{% static 'mdeditor/js/editormd.min.js' %}"></script>
+    <!-- 文章正文 mdeditor编辑器控件的渲染 -->
+    <script src="{% static 'mdeditor/id_body-wmd-wrapper.js' %}"></script>
 {% endblock script %}
