--- a/templates/article/list.html
+++ b/templates/article/list.html
@@ -3,8 +3,7 @@
 {% load staticfiles %}
 
 {# 加载自定义的模板过滤器和模板标签 #}
-{% load my_filters %}
-{% load my_tags %}
+{% load article_extra %}
 
 {# 写入 base.html 中定义的 title #}
 {% block head_title %}
@@ -102,8 +101,8 @@
             <!-- 摘要 -->
             <div>
                 <p style="color: gray;">
-                    <!-- {{ article.body|slice:'100' }}... -->
-                    {{ article.excerpt }}...
+                    {# 根据正文生成文章摘要 #}
+                    {{ article.body|to_abstract }}
                 </p>
             </div>
             <!-- 注脚 -->
@@ -122,7 +121,7 @@
                     <i class="fas fa-clock" style="color: pink;"></i>
                     {# {{ article.created|date:'Y-m-d' }} #}
                     {# 使用相对时间，如5个月前 #}
-                    {{ article.created|timesince_zh }}
+                    {{ article.created|time_since_zh }}
                 </span>
             </p>
         </div>
