--- a/templates/base.html
+++ b/templates/base.html
@@ -82,10 +82,10 @@
     {% block script %}{% endblock script %}
 
     <!-- popper: bootstrap.js的依赖 -->
-    <script src="{% static 'popper-core-2.5.4/popper.js' %}"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    <!-- <script src="{% static 'popper-core-2.5.4/popper.js' %}"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script> -->
+        crossorigin="anonymous"></script>
 
     <!-- 引入bootstrap的js文件 -->
     <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
